--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linstaller (6.1.2~trios18.1) testing; urgency=medium
+
+  * Fix a crash, caused by typo in partdisks module.glade.
+
+ -- Filip Danilovic <filip@openmailbox.org>  Wed, 07 Jan 2015 01:06:00 +0100
+
 linstaller (6.1.2~trios18) testing; urgency=medium
 
   * Updated partitiong module, colors, buttons & labels improved.
